--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.54.1",
+		"@typescript-eslint/parser": "^5.0.0",
 		"eslint-config-prettier": "8.7.0",
 		"husky": "^8.0.3",
 		"prettier": "2.8.4"
